test/libyul/yulSyntaxTests/instructions.yul
{ pop }
// ====
// dialect: evm
// ----
// ParserError 6913: (6-7): Call or assignment expected.
